--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ pandas = "^2.2.3"
 scipy = "^1.15.2"
 seaborn = "^0.13.2"
 kagglehub = "^0.3.9"
+numpy = "^2.2.3"
+ipykernel = "^6.29.5"
+scikit-learn = "^1.6.1"
+jupyter = "^1.1.1"
 
 
 [build-system]
